# TradingEngine

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  analysis.py  bindings.cpp  data_handler.py  eventDispatcher.h  events.h  limitOrder.cpp  limitOrder.h  main.py  marketOrder.cpp  marketOrder.h  matchingEngine.cpp  matchingEngine.h  order.h  orderBook.cpp  orderBook.h  portfolio.py  pytest.ini  requirements.txt  strategy.py  strategy_report.html  threadSafeQueue.h  trading_core.pyi  types.h
csv/: backtest_history.csv  backtest_trades.csv
tests/: eventDispatcherTest.cpp  matchingEngineTest.cpp  orderBookTest.cpp
tests/python_tests/: portfolio_test.py
